# MusicTailor

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1_tables.py  0002_provider_cache.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/providers/: acousticbrainz.py  base.py  lastfm.py  musicbrainz.py  spotify.py
backend/app/routes/: recommend.py  search.py
backend/app/services/: mock_provider.py  recommend.py  scoring.py
backend/tests/: conftest.py  test_providers_acousticbrainz.py  test_providers_base.py  test_providers_lastfm.py  test_providers_musicbrainz.py  test_providers_spotify.py  test_services_recommend.py  test_services_scoring.py
frontend/: .env.example  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: AmbientBlobs.tsx  ArtistChipFilter.tsx  Dial.tsx  HeroDemo.tsx  MorphSentence.tsx  PresetShowcase.tsx  PreviewButton.tsx  ResultsGrid.tsx  SeedInput.tsx  SliderPanel.tsx  SliderRadar.tsx  ThemeToggle.tsx  TypePicker.tsx
frontend/src/lib/: api.ts  presets.ts  schemas.ts  showcasePresets.ts  typeColors.ts
frontend/src/routes/: __root.tsx  index.tsx  presets.tsx
frontend/src/state/: app.ts
frontend/src/styles/: globals.css
